fixed wrapping and added jenna credits

--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ margin-left:auto;
 margin-right:auto;
 font-weight:bold;
 
+
 }
 
 .navul {
@@ -361,18 +362,24 @@ border-radius:5px;
     padding:15px;
     color: #0B0C10;
     background-color:#8FF599;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
 
 .aboutlegendstring {
     padding:15px;
     background-color:#5CB8FF;
     color: #0B0C10;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
 
 .spoillegendstring {
     padding:15px;
     background-color:#7E6B8F;
     color:#0B0C10;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
 
 input[type="text"] {
@@ -534,6 +541,11 @@ border-radius:10px;
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
+}
+
+.pantryformheadinglabel {
+    text-wrap:nowrap;
+    text-overflow: ellipsis;
 }
 
 .creditsmaindiv {
